--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -30,6 +30,11 @@
            class="text-md font-semibold bg-primary_light rounded-xl px-8 py-2 hover:bg-primary_dark transition-transform duration-300 hover:scale-105 {% if section == 'data_project' %} !bg-primary_dark text-white{% endif %}">
            {% translate "Progreso" %}
         </a>
+        <a href="/project/{{ project.id }}/members"
+           class="text-md font-semibold bg-primary_light rounded-xl px-8 py-2 hover:bg-primary_dark transition-transform duration-300 hover:scale-105 {% if section == 'members' %} !bg-primary_dark text-white{% endif %}">
+           {% translate "Miembros" %}
+        </a>
+        
     </div>
 
     <!-- Panel de Control -->
