--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -16,6 +16,8 @@
            class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 {% if section == 'calendar' %} !bg-primary_dark text-white{% endif %}">Calendario</a>
         <a href="/project/{{ project.id }}/data_project"
             class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 {% if section == 'data_project' %} !bg-primary_dark text-white{% endif %}">Progreso</a>
+        <a href="/project/{{ project.id }}/updates"
+            class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 {% if section == 'updates' %} !bg-primary_dark text-white{% endif %}">Actualizaciones</a>
     </div>
 
     <!-- Panel de Control -->
