--- a/src/templates/projects/project_members.html
+++ b/src/templates/projects/project_members.html
@@ -1,6 +1,98 @@
-{% extends "navigation/navigation.html" %}
+{% extends "projects/default_project_view.html" %}
 {% load i18n %}
 
-{% block app_content %}
-hola
+{% block section %}
+
+<!-- Members Section -->
+<h2 class="text-2xl font-bold text-primary_black mb-4">{% translate "Miembros" %}</h2>
+
+<!-- Tabla -->
+<div class="overflow-x-auto">
+    <table class="min-w-full divide-y divide-gray-500">
+        <thead>
+            <tr>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-primary_black uppercase tracking-wider">
+                    {% translate "Nombre" %}
+                </th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-primary_black uppercase tracking-wider">
+                    {% translate "Email" %}
+                </th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-primary_black uppercase tracking-wider">
+                    {% translate "Rol" %}
+                </th>
+            </tr>
+        </thead>
+
+        <tbody>
+            {% for member in members %}
+            <tr class="bg-transparent">
+                <!-- Nombre -->
+                <td class="px-6 py-4 whitespace-nowrap">
+                    <div class="flex items-center">
+                        <div class="flex-shrink-0 h-10 w-10">
+                            <img class="h-10 w-10 rounded-full"
+                                src="{{ member.user.profile_picture.url|default:'https://via.placeholder.com/150' }}" alt="">
+                        </div>
+                        <div class="ml-4">
+                            <a href="../../profile/freelancer_profile/{{member.user.username}}" class="text-sm font-medium ">{{ member.user.username }} </a>
+                        </div>
+                    </div>
+                </td>
+
+                <!-- Email -->
+                <td class="px-6 py-4 whitespace-nowrap">
+                    <div class="text-sm text-primary_black">{{ member.user.email|default:"-" }}</div>
+                </td>
+
+                <!-- Role Dropdown -->
+                <td class="px-6 py-4 text-sm text-primary_lightest">
+                    <div class="relative inline-block text-left">
+                        <select class="bg-primary_black text-bg_white text-sm py-1 px-2 rounded-md focus:outline-none focus:ring-2 focus:ring-primary_medium"
+                        onchange="updateRole('{{ member.id }}', this.value)">
+                            {% if member.is_owner %}
+                            <option value="administrator" {% if member.role == 'administrator' %}selected{% endif %}>{% translate "Propietario" %}</option>P
+                            {% else %}
+                            <option value="administrator" {% if member.role == 'administrator' %}selected{% endif %}>{% translate "Administrador" %}</option>
+                            <option value="member" {% if member.role == 'member' %}selected{% endif %}>{% translate "Miembro" %}</option>
+                            <option value="viewer" {% if member.role == 'viewer' %}selected{% endif %}>{% translate "Visualizador" %}</option>
+                        </select>
+                        {% endif %}
+                    </div>
+                </td>
+
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+<script>
+    function updateRole(memberId, newRole) {
+        const csrfToken = '{{ csrf_token }}';  // Añade tu token CSRF
+
+        fetch(`/project/update_role/${memberId}/`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': csrfToken,  // Enviar el token CSRF en la cabecera
+            },
+            body: JSON.stringify({
+                role: newRole,
+            })
+        })
+        .then(response => {
+            if (response.ok) {
+                alert('Rol actualizado correctamente.');
+            } else {
+                alert('No tienes permisos para realizar esta acción.');
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            alert('Ocurrió un error al intentar actualizar el rol.');
+        });
+    }
+</script>
+
+
 {% endblock %}
