--- a/src/templates/chat/chat_room.html
+++ b/src/templates/chat/chat_room.html
@@ -34,7 +34,7 @@
                             <span class="text-xs text-primary_light ml-2">{{ message.timestamp|time:"g:i A" }}</span>
                         </div>
                         {% if message.file %}
-                            <p class="text-sm"><a href="{{ message.file.url }}" class="text-blue-500 underline" download>{{ message.file.name }}</a></p>
+                            <p class="text-sm"><a href="{{ message.file.url }}" class="text-bg_white underline" download>{{ message.file.name }}</a></p>
                         {% else %}
                             <p class="text-sm">{{ message.content }}</p>
                         {% endif %}
@@ -60,7 +60,7 @@
                         class="bg-gray-500 hover:bg-gray-600 text-white px-2 py-2 rounded-lg"
                         onclick="document.getElementById('chat-file-input').click();"
                     >
-                        📎
+                        📁
                     </button>
 
                     <!-- Botón de enviar mensaje -->
@@ -115,7 +115,7 @@
                     <span class="font-semibold text-sm">${data.user}</span>
                     <span class="text-xs text-primary_light ml-2">${new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'})}</span>
                 </div>
-                ${data.file ? `<p class="text-sm"><a href="${data.file}" class="text-blue-500 underline">${data.filename}</a></p>` : `<p class="text-sm">${data.message}</p>`}
+                ${data.file ? `<p class="text-sm"><a href="${data.file}" class="text-bg_white underline">${data.filename}</a></p>` : `<p class="text-sm">${data.message}</p>`}
             </div>
         `;
         
@@ -126,8 +126,14 @@
     document.getElementById('chat-message-submit').onclick = function (e) {
         const messageInput = document.getElementById('chat-message-input');
         const fileInput = document.getElementById('chat-file-input');
-        const message = messageInput.value;
+        const message = messageInput.value.trim();
         const file = fileInput.files[0];
+
+        // Verificar si el mensaje no está vacío o si hay un archivo
+        if (!message && !file) {
+            alert("No puedes enviar un mensaje vacío.");
+            return;
+        }
 
         const formData = new FormData();
         formData.append('project_id', project_id);
@@ -160,7 +166,7 @@
                               <span class="font-semibold text-sm">${data.user}</span>
                               <span class="text-xs text-primary_light ml-2">${new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'})}</span>
                           </div>
-                          ${data.file ? `<p class="text-sm"><a href="${data.file}" class="text-blue-500 underline">${data.filename}</a></p>` : `<p class="text-sm">${data.message}</p>`}
+                          ${data.file ? `<p class="text-sm"><a href="${data.file}" class="text-bg_white underline">${data.filename}</a></p>` : `<p class="text-sm">${data.message}</p>`}
                       </div>
                   `;
                   
