--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -11,7 +11,7 @@
     <!-- Panel de Control -->
     <h1 class="text-primary_black text-2xl font-bold mt-4">{% translate "Panel de control" %}</h1>
 
-    <div class="bg-primary_lightest p-6 rounded-xl shadow-md mt-6">
+    <div class="bg-primary_lightest p-6 rounded-lg shadow-sm mt-6">
         <div class="flex flex-col md:flex-row pt-10">
             <!-- Left Section with Image and Basic Info -->
             <div class="flex-shrink-0 w-full md:w-1/3">
@@ -128,8 +128,8 @@
 </div>
 
 {% if user_is_member or user_is_admin or user_is_viewer %}
-<div class="mt-8 bg-primary_lightest p-6 rounded-lg shadow-md">
-    {% block section %}
+<div class="">
+    {% block project_section %}
     {% endblock %}
 </div>
 {% endif %}
