--- a/src/templates/projects/planning_section/project_deliverables.html
+++ b/src/templates/projects/planning_section/project_deliverables.html
@@ -1,7 +1,4 @@
-{% extends "projects/default_project_view.html" %}
-
 {% load i18n %}
-{% block section %}
 
 <div>
     <!-- Hitos Section -->
@@ -39,4 +36,4 @@
         {% endfor %}
         {% endfor %}
     </div>
-    {% endblock %}
+</div>
